feat(virtual-thread): use virtual threads (#1)