@@ -36,27 +36,27 @@ public class Watch implements Callable<Integer> {
             return 0;
         }
 
-        ExecutorService executor = Executors.newFixedThreadPool(logGroups.size());
-        String commonPrefix = logGroups.size() > 1 ? StringUtils.getCommonPrefix(logGroups.toArray(new String[0])) : logGroups.get(0);
+        try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
+            String commonPrefix = logGroups.size() > 1 ? StringUtils.getCommonPrefix(logGroups.toArray(new String[0])) : logGroups.get(0);
 
-        for (int i = 0; i < logGroups.size(); i++) {
-            String logGroup = logGroups.get(i);
-            String withoutPrefix = logGroup.replace(commonPrefix, "");
-            // TODO replace with async and don't create too many threads
-            final int index = i;
-            executor.submit(() -> {
-                try {
-                    this.cloudWatchService.watchLogs(logGroup, () -> true, event -> {
-                        String date = Instant.ofEpochMilli(event.timestamp()).toString();
-                        System.out.println(format(withoutPrefix, event, date, index));
-                    });
-                } catch (RuntimeException e) {
-                    log.error("Error while processing loggroup {}", logGroup, e);
-                }
-            });
+            for (int i = 0; i < logGroups.size(); i++) {
+                String logGroup = logGroups.get(i);
+                String withoutPrefix = logGroup.replace(commonPrefix, "");
+                final int index = i;
+                executor.submit(() -> {
+                    try {
+                        this.cloudWatchService.watchLogs(logGroup, () -> true, event -> {
+                            String date = Instant.ofEpochMilli(event.timestamp()).toString();
+                            System.out.println(format(withoutPrefix, event, date, index));
+                        });
+                    } catch (RuntimeException e) {
+                        log.error("Error while processing loggroup {}", logGroup, e);
+                    }
+                });
+            }
+            var success = executor.awaitTermination(Long.MAX_VALUE, TimeUnit.SECONDS);
+            return success ? 0 : 1;
         }
-        var success = executor.awaitTermination(Long.MAX_VALUE, TimeUnit.SECONDS);
-        return success ? 0 : 1;
     }
 
     private CommandLine.Help.Ansi.Text format(String withoutPrefix, FilteredLogEvent event, String date, int index) {
